# webscraping-smartphones

./: .pre-commit-config.yaml  extract.py  main.py  pyproject.toml  readme.md  robots.txt
data/: filtros.json  informacoes-smartphones.csv  teste.csv
extract/: extract.py
tests/: test_scraping.py  testes-manuais-apagar.py
transform/: transform.py
